# trustaction-cli

./: .env-sample  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  main_w.rs
src/node/: electrum_server.rs  mod.rs
src/seed/: mod.rs  unit_test.rs
src/tests/: env.rs  mod.rs  node.rs  seed.rs  transaction.rs
src/transaction/: format.rs  legacy.rs  mod.rs
src/utils/: format.rs  mod.rs  reader.rs
src/wallet/: address.rs  mod.rs  output_descriptor.rs
